[package]
name = "htop-monitor"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["ws"] }
futures = "0.3.28"
futures-util = "0.3.28"
serde_json = "1.0.105"
sysinfo = "0.29.8"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
tower-http = { version = "0.4.3", features = ["cors"] }
